# Etha

./: .gitattributes  .gitignore  CLAUDE.md  DESIGN.md  QUICKSTART.md  README.md  hostfile  pixi.toml  pyproject.toml
.github/workflows/: claude-code-review.yml  docs.yml
bench/: BUCKET_TUNING.md  README.md  benchmark.ipynb  benchmark.py  benchmark_communication.py  kvstore_benchmark.py  run_benchmark.sh  transfer_benchmark.py  utils.py
dev/: mq_bench.py  zmq_bench.py
docs/: conf.py  index.md
docs/design/: connection-validation.md  index.md
examples/: README.md  inference_example.py  middleware_example.py  train_example.py
examples/vllm_weight_sync/: README.md  agent.py  chat_client.py  common.py  launch.py  trainer.py  vllm_server.py
prototyping/: agent.py  common.py
prototyping/command_queue_prototype/: README.md  reader.py  shared.py  writer.py
prototyping/distributed_model_transfer/: README.md  inference.py  kjob.sh  launch.sh  train.py
prototyping/distributed_tensor_transfer/: README.md  agent.py  common.py  inference.py  launch.sh  ray_inference.py  train.py
prototyping/pair_registration_demo/: README.md  agent.py  shared.py  worker_inference.py  worker_training.py
prototyping/weight_transfer/: README.md  agent.py  common.py  inference.py  launch.sh  (+5 more)
src/: pixi.toml  pyproject.toml
tests/: test_command_queue.py  test_communication_cpu.py  test_communication_cpu_single.py  test_communication_replicate_shard.py  test_communication_symmetric_mesh.py  test_distributed_model_transfer.py  test_kvstore.py  test_pair_registration_demo.py  test_partial_chunk_reduce.py  test_self_copy_bucket.py  test_tensor_bus.py
(+63 files in other folders)
